--- a/style.css
+++ b/style.css
@@ -95,12 +95,12 @@ h2 {
 .party {
     background: url(Vectorrr.png);
     background-repeat: no-repeat;
-    width: 1320px;
+    width: 1300px;
     height: 600px;
     display: flex;
     justify-content: space-around;
     padding-top: 50px;
-    margin-top: 20px;
+    margin: 0 auto;
 }
 
 .party-title {
@@ -134,10 +134,11 @@ h2 {
 }
 
 .place {
-    margin-top: 30px;
-    text-align: center;
-    padding: 100px 386px 214px 385px;
 
+    width: 1300px;
+    height: 616px;
+
+    margin: 0 auto;
     border-radius: 16px;
     background: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%);
 }
@@ -174,8 +175,9 @@ h2 {
 
 .gift {
     width: 1600px;
-    height: 7335px;
+    height: 1300px;
     background: #FFF;
+    margin: 0 auto;
 }
 
 .gift-offer {
@@ -200,12 +202,12 @@ h2 {
 
 .gift-details {
     color: rgba(7, 2, 17, 0.60);
-    font-family: Inter;
+
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
     line-height: 32px;
-    /* 160% */
+
 }
 
 .photo {
@@ -223,4 +225,182 @@ h2 {
 
     transform: scale(1.1);
 
+}
+
+.mail {
+    margin: 0 auto;
+    width: 1320px;
+    height: 616px;
+    background: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%);
+    border-radius: 8px;
+    margin-top: 20px;
+
+}
+
+.mail-title {
+    color: #070211;
+    text-align: center;
+    font-family: Merriweather;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: normal;
+    text-transform: capitalize;
+}
+
+.mail-details {
+    width: 896px;
+    color: rgba(7, 2, 17, 0.60);
+    text-align: center;
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 32px;
+    padding-left: 40px;
+
+}
+
+.mail-1 {
+    padding-top: 80px;
+    padding-left: 585px;
+
+}
+
+.Subscribe input[type="email"] {
+    width: 180px;
+    height: 30px;
+    padding: 25px 477px 25px 39px;
+    background-color: #FFF;
+    border: 0;
+    color: rgba(7, 2, 17, 0.30);
+
+    text-align: center;
+    font-family: Inter;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    border-radius: 50px;
+
+}
+
+.Subscribe {
+    padding-left: 310px;
+}
+
+.subs {
+    background-color: #04AA6D;
+
+    border: 0;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    height: 72px;
+
+}
+
+.Subscribe input[type=submit] {
+    height: 84px;
+    width: 200px;
+    position: relative;
+    border-radius: 0px 50px 50px 0px;
+    background: #F00;
+    left: -178px;
+    color: #FFF;
+    padding: 24px;
+    text-align: center;
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    text-transform: capitalize;
+}
+
+.last {
+    width: 1600px;
+    height: 609px;
+    margin: 0 auto;
+    background: #070211;
+
+
+}
+
+.last-last {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding-top: 100px;
+
+}
+
+.last-location {
+    color: #FFF;
+
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 40px;
+    width: 334px;
+
+    /* 166.667% */
+}
+
+.last-phn {
+    color: #FFF;
+
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 40px;
+
+
+    /* 166.667% */
+}
+
+hr {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 1200px;
+    margin-top: 20px;
+
+}
+
+.logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 20px;
+    gap: 40px;
+
+}
+
+.end {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.end-t {
+    color: #ffffff;
+
+
+    font-size: 24px;
+
+
+}
+
+.btn-3 {
+    padding: 16px 32px;
+    border-radius: 8px;
+    background: #FF69B4;
 }
